--- a/.gitignore
+++ b/.gitignore
@@ -486,8 +486,16 @@ MigrationBackup/
 
 ### VisualStudioCode template
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 
+CESA.code-workspace
+.settings/org.eclipse.wst.jsdt.ui.superType.name
+.project
+.pydevproject
+.settings/.jsdtscope
+.settings/org.eclipse.wst.jsdt.ui.superType.container
+githubcesa
+githubcesa.pub
